<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/result_extraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/first_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/txt_first_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/second_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/txt_second_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/place_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/txt_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <Button
            android:layout_gravity="center"
            android:text="@string/imprevisto"
            android:id="@+id/btn_imprevisto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:layout_gravity="center"
            android:text="@string/suggerimento"
            android:id="@+id/btn_suggerimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>