<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_extraction">

    <fragment
        android:id="@+id/navigation_extraction"
        android:name="com.sbaiardi.mystory.ui.extraction.ExtractionFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_extraction_layout" >
        <action
            android:id="@+id/action_navigation_extraction_to_navigation_second_name"
            app:destination="@id/navigation_second_name" />
    </fragment>

    <fragment
        android:id="@+id/navigation_second_name"
        android:name="com.sbaiardi.mystory.ui.extraction.SecondNameFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_second_name_layout">
        <action
            android:id="@+id/action_navigation_second_name_to_navigation_place_extraction"
            app:destination="@id/navigation_place_extraction" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.sbaiardi.mystory.ui.results.ResultFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_result_layout" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sbaiardi.mystory.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_place_extraction"
        android:name="com.sbaiardi.mystory.ui.extraction.PlaceExtractionFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_place_extration_layout" >
        <action
            android:id="@+id/action_navigation_place_extraction_to_navigation_result"
            app:destination="@id/navigation_result" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sbaiardi.mystory.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>